binaryen/src/Bindings/Binaryen/Raw.hs

module Bindings.Binaryen.Raw where

import Foreign
import Foreign.C

type BinaryenIndex = Word32

type BinaryenType = Word32

foreign import ccall unsafe "BinaryenTypeNone" c_BinaryenTypeNone
  :: BinaryenType

foreign import ccall unsafe "BinaryenTypeInt32" c_BinaryenTypeInt32
  :: BinaryenType

foreign import ccall unsafe "BinaryenTypeInt64" c_BinaryenTypeInt64
  :: BinaryenType

foreign import ccall unsafe "BinaryenTypeFloat32" c_BinaryenTypeFloat32
  :: BinaryenType

foreign import ccall unsafe "BinaryenTypeFloat64" c_BinaryenTypeFloat64
  :: BinaryenType

foreign import ccall unsafe "BinaryenTypeVec128" c_BinaryenTypeVec128
  :: BinaryenType

foreign import ccall unsafe "BinaryenTypeUnreachable" c_BinaryenTypeUnreachable
  :: BinaryenType

foreign import ccall unsafe "BinaryenTypeAuto" c_BinaryenTypeAuto
  :: BinaryenType

type BinaryenExpressionId = Word32

foreign import ccall unsafe "BinaryenInvalidId" c_BinaryenInvalidId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenBlockId" c_BinaryenBlockId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenIfId" c_BinaryenIfId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenLoopId" c_BinaryenLoopId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenBreakId" c_BinaryenBreakId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenSwitchId" c_BinaryenSwitchId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenCallId" c_BinaryenCallId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenCallIndirectId" c_BinaryenCallIndirectId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenGetLocalId" c_BinaryenGetLocalId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenSetLocalId" c_BinaryenSetLocalId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenGetGlobalId" c_BinaryenGetGlobalId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenSetGlobalId" c_BinaryenSetGlobalId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenLoadId" c_BinaryenLoadId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenStoreId" c_BinaryenStoreId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenConstId" c_BinaryenConstId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenUnaryId" c_BinaryenUnaryId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenBinaryId" c_BinaryenBinaryId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenSelectId" c_BinaryenSelectId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenDropId" c_BinaryenDropId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenReturnId" c_BinaryenReturnId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenHostId" c_BinaryenHostId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenNopId" c_BinaryenNopId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenUnreachableId" c_BinaryenUnreachableId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenAtomicCmpxchgId" c_BinaryenAtomicCmpxchgId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenAtomicRMWId" c_BinaryenAtomicRMWId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenAtomicWaitId" c_BinaryenAtomicWaitId
  :: BinaryenExpressionId

foreign import ccall unsafe "BinaryenAtomicWakeId" c_BinaryenAtomicWakeId
  :: BinaryenExpressionId

type BinaryenExternalKind = Word32

foreign import ccall unsafe "BinaryenExternalFunction" c_BinaryenExternalFunction
  :: BinaryenExternalKind

foreign import ccall unsafe "BinaryenExternalTable" c_BinaryenExternalTable
  :: BinaryenExternalKind

foreign import ccall unsafe "BinaryenExternalMemory" c_BinaryenExternalMemory
  :: BinaryenExternalKind

foreign import ccall unsafe "BinaryenExternalGlobal" c_BinaryenExternalGlobal
  :: BinaryenExternalKind

data BinaryenModule

type BinaryenModuleRef = Ptr BinaryenModule

foreign import ccall unsafe "BinaryenModuleCreate" c_BinaryenModuleCreate
  :: IO BinaryenModuleRef

foreign import ccall unsafe "BinaryenModuleDispose" c_BinaryenModuleDispose
  :: BinaryenModuleRef -> IO ()

data BinaryenFunctionType

type BinaryenFunctionTypeRef = Ptr BinaryenFunctionType

foreign import ccall unsafe "BinaryenAddFunctionType" c_BinaryenAddFunctionType
  :: BinaryenModuleRef ->
  Ptr CChar ->
    BinaryenType ->
      Ptr BinaryenType -> BinaryenIndex -> IO BinaryenFunctionTypeRef

foreign import ccall unsafe "BinaryenRemoveFunctionType" c_BinaryenRemoveFunctionType
  :: BinaryenModuleRef -> Ptr CChar -> IO ()

foreign import ccall unsafe "BinaryenConstInt32" c_BinaryenConstInt32
  :: BinaryenModuleRef -> Int32 -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenConstInt64" c_BinaryenConstInt64
  :: BinaryenModuleRef -> Int64 -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenConstFloat32" c_BinaryenConstFloat32
  :: BinaryenModuleRef -> Float -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenConstFloat64" c_BinaryenConstFloat64
  :: BinaryenModuleRef -> Double -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenConstFloat32Bits" c_BinaryenConstFloat32Bits
  :: BinaryenModuleRef -> Int32 -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenConstFloat64Bits" c_BinaryenConstFloat64Bits
  :: BinaryenModuleRef -> Int64 -> IO BinaryenExpressionRef

type BinaryenOp = Int32

foreign import ccall unsafe "BinaryenClzInt32" c_BinaryenClzInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenCtzInt32" c_BinaryenCtzInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenPopcntInt32" c_BinaryenPopcntInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenNegFloat32" c_BinaryenNegFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAbsFloat32" c_BinaryenAbsFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenCeilFloat32" c_BinaryenCeilFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenFloorFloat32" c_BinaryenFloorFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncFloat32" c_BinaryenTruncFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenNearestFloat32" c_BinaryenNearestFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenSqrtFloat32" c_BinaryenSqrtFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenEqZInt32" c_BinaryenEqZInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenClzInt64" c_BinaryenClzInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenCtzInt64" c_BinaryenCtzInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenPopcntInt64" c_BinaryenPopcntInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenNegFloat64" c_BinaryenNegFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAbsFloat64" c_BinaryenAbsFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenCeilFloat64" c_BinaryenCeilFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenFloorFloat64" c_BinaryenFloorFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncFloat64" c_BinaryenTruncFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenNearestFloat64" c_BinaryenNearestFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenSqrtFloat64" c_BinaryenSqrtFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenEqZInt64" c_BinaryenEqZInt64 :: BinaryenOp

foreign import ccall unsafe "BinaryenExtendSInt32" c_BinaryenExtendSInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenExtendUInt32" c_BinaryenExtendUInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenWrapInt64" c_BinaryenWrapInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSFloat32ToInt32" c_BinaryenTruncSFloat32ToInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSFloat32ToInt64" c_BinaryenTruncSFloat32ToInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncUFloat32ToInt32" c_BinaryenTruncUFloat32ToInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncUFloat32ToInt64" c_BinaryenTruncUFloat32ToInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSFloat64ToInt32" c_BinaryenTruncSFloat64ToInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncSFloat64ToInt64" c_BinaryenTruncSFloat64ToInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncUFloat64ToInt32" c_BinaryenTruncUFloat64ToInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenTruncUFloat64ToInt64" c_BinaryenTruncUFloat64ToInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenReinterpretFloat32" c_BinaryenReinterpretFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenReinterpretFloat64" c_BinaryenReinterpretFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenExtendS8Int32" c_BinaryenExtendS8Int32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenExtendS16Int32" c_BinaryenExtendS16Int32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenExtendS8Int64" c_BinaryenExtendS8Int64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenExtendS16Int64" c_BinaryenExtendS16Int64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenExtendS32Int64" c_BinaryenExtendS32Int64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenConvertSInt32ToFloat32" c_BinaryenConvertSInt32ToFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenConvertSInt32ToFloat64" c_BinaryenConvertSInt32ToFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenConvertUInt32ToFloat32" c_BinaryenConvertUInt32ToFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenConvertUInt32ToFloat64" c_BinaryenConvertUInt32ToFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenConvertSInt64ToFloat32" c_BinaryenConvertSInt64ToFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenConvertSInt64ToFloat64" c_BinaryenConvertSInt64ToFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenConvertUInt64ToFloat32" c_BinaryenConvertUInt64ToFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenConvertUInt64ToFloat64" c_BinaryenConvertUInt64ToFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenPromoteFloat32" c_BinaryenPromoteFloat32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenDemoteFloat64" c_BinaryenDemoteFloat64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenReinterpretInt32" c_BinaryenReinterpretInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenReinterpretInt64" c_BinaryenReinterpretInt64
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAddInt32" c_BinaryenAddInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenSubInt32" c_BinaryenSubInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenMulInt32" c_BinaryenMulInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenDivSInt32" c_BinaryenDivSInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenDivUInt32" c_BinaryenDivUInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenRemSInt32" c_BinaryenRemSInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenRemUInt32" c_BinaryenRemUInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenAndInt32" c_BinaryenAndInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenOrInt32" c_BinaryenOrInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenXorInt32" c_BinaryenXorInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenShlInt32" c_BinaryenShlInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenShrUInt32" c_BinaryenShrUInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenShrSInt32" c_BinaryenShrSInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenRotLInt32" c_BinaryenRotLInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenRotRInt32" c_BinaryenRotRInt32
  :: BinaryenOp

foreign import ccall unsafe "BinaryenEqInt32" c_BinaryenEqInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenNeInt32" c_BinaryenNeInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenLtSInt32" c_BinaryenLtSInt32 :: BinaryenOp

foreign import ccall unsafe "BinaryenLtUInt32" c_BinaryenLtUInt32 :: BinaryenOp
